[package]
name = "plutus-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
approx = "0.5.1"
csv = "1.1"
round = "0.1.2"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "1.0"
